# kaggle-deep-past

./: .gitignore  README.md  implementation_plan.md  pyproject.toml  sample.env
configs/: cloud.yaml  local.yaml  sweep_r16_lr1e-4.yaml  sweep_r32_lr2e-4.yaml  sweep_r32_lr5e-5.yaml  sweep_r64_lr2e-4.yaml
notebooks/: kernel-metadata.json  submission.ipynb
scripts/: _resolve_remote.sh  build_notebook.py  download_data.sh  export_model.sh  run_remote.sh  setup_cloud.sh  sweep.sh  sync_down.sh  sync_up.sh  upload_kaggle_dataset.sh  watch_remote.sh
src/: callbacks.py  dataset.py  evaluate.py  inference.py  postprocess.py  preprocess.py  submit.py  train.py
